--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+<meta name="Dan Logan" content="application/xhtml+xml"/>
+<meta charset="UTF-8"/>
+<title>danloganxyz</title>
+<link rel="stylesheet" type="text/css" href="styles.css"/>
+</head>
+<body>
+  <div id="portrait">
+    <h2>DAN</h2>
+    <h1>LOGAN</h1>
+    <h3>xyz</h3>
+  </div>
+</body>
+</html>
