Updating header and title banner to shift Logan right

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
   <div id="portrait">
-    <h2>DAN</h2>
-    <h1>LOGAN</h1>
-    <h3>xyz</h3>
+    <div id="title-banner">
+      <h2>DAN</h2>
+      <h1>LOGAN</h1>
+      <h3>xyz</h3>
+    </div>
   </div>
 </body>
 </html>
