--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <meta name="Dan Logan" content="application/xhtml+xml"/>
 <meta charset="UTF-8"/>
 <title>danloganxyz</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
 <link rel="stylesheet" type="text/css" href="styles.css"/>
+<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+<script src="https://cdn.rawgit.com/showdownjs/showdown/1.4.2/dist/showdown.min.js"></script>
+<script src="js/portrait.js"></script>
+<script src="js/content-markdown.js"></script>
 </head>
 <body>
   <div id="portrait">
@@ -13,6 +18,20 @@
       <h1>LOGAN</h1>
       <h3>xyz</h3>
     </div>
+    <div id="table-of-contents">
+      <ul>
+        <li>
+          <span onclick="loadMarkdown('md/about')">about</span>
+        </li>
+        <li>
+          <span onclick="loadMarkdown('md/resume')">resume</span>
+        </li>
+        <li>
+          <a href="https://github.com/dmlogs">github</a>
+        </li>
+      </ul>
+    </div>
   </div>
+  <div id="content"></div>
 </body>
 </html>
