Moved adding inline styles to instead use classes and assign correct class accordingly.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>LOGAN</h1>
         <h3>xyz</h3>
       </div>
-      <div id="table-of-contents">
+      <div id="table-of-contents" class="right">
         <ul>
           <li>
             <span onclick="loadMarkdown('md/about')">about</span>
