Adding mail link, moving loadMarkdown to new object dmlogs

--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
       <div id="table-of-contents" class="right">
         <ul>
           <li>
-            <span onclick="loadMarkdown('md/about')">about</span>
+            <span onclick="dmlogs.loadMarkdown('md/about')">about</span>
           </li>
           <li>
-            <span onclick="loadMarkdown('md/resume')">resume</span>
+            <span onclick="dmlogs.loadMarkdown('md/resume')">resume</span>
           </li>
           <li>
             <a href="https://github.com/dmlogs">github</a>
+          </li>
+          <li>
+            <a href="mailto:dmlogs@gmail.com">mail</a>
           </li>
         </ul>
       </div>
