--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 <script src="https://cdn.rawgit.com/showdownjs/showdown/1.4.2/dist/showdown.min.js"></script>
 <script src="js/portrait.js"></script>
-<script src="js/content-markdown.js"></script>
+<script src="js/load-markdown.js"></script>
 </head>
 <body>
   <div id="portrait">
