Adding md extension to files in md folder

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div id="table-of-contents" class="right">
         <ul>
           <li>
-            <span onclick="dmlogs.loadMarkdown('md/about')">about</span>
+            <span onclick="dmlogs.loadMarkdown('md/about.md')">about</span>
           </li>
           <li>
-            <span onclick="dmlogs.loadMarkdown('md/resume')">resume</span>
+            <span onclick="dmlogs.loadMarkdown('md/resume.md')">resume</span>
           </li>
           <li>
             <a href="https://github.com/dmlogs">github</a>
