--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="Dan Logan" content="application/xhtml+xml"/>
 <meta charset="UTF-8"/>
-<title>danloganxyz</title>
+<title>danlogan</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 <link rel="stylesheet" type="text/css" href="styles.css"/>
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
@@ -22,7 +22,6 @@
       <div id="title-banner">
         <h2>DAN</h2>
         <h1>LOGAN</h1>
-        <h3>xyz</h3>
       </div>
       <div id="table-of-contents" class="right">
         <ul>
